--- a/supervisord.conf
+++ b/supervisord.conf
@@ -178,14 +178,14 @@ redirect_stderr=true
 
 
 [program:python_timeserver]
-directory=/app
+directory=/app/mqttdockersample/
 command=/bin/python3 timeservmqtt.py
 autostart=true
 exitcodes=0
 
 [program:Cprogram]
-directory=/app
-command=/app/pubsub
+directory=/app/mqttdockersample/
+command=/app/mqttdockersample/pubsub
 autostart=true
 startretries = 1
 exitcodes=0
