Changes related to ssl connection

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -168,7 +168,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;[include]
 ;files = relative/directory/*.ini
 [program:mosquitto]
-command:/sbin/mosquitto -p 2020
+command:/sbin/mosquitto -v -c /etc/mosquitto/mosquitto.conf 
 autostart=true
 autorestart=unexpected
 exitcodes=0
