--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,9 +1,24 @@
+# Place your local configuration in /etc/mosquitto/conf.d/
+#
+# A full description of the configuration file is at
+# /usr/share/doc/mosquitto/examples/mosquitto.conf.example
+listener 8883
+cafile /app/mqttdockersample/CA/ca.crt.pem
+#capath 
+
+# Path to the PEM encoded server certificate.
+certfile /app/mqttdockersample/Server/server.crt.pem
+
+# Path to the PEM encoded keyfile.
+keyfile /app/mqttdockersample/Server/server.key.pem
+
+
+
 allow_anonymous true
-pid_file /var/run/mosquitto.pid
 
-persistence true
-persistence_location /var/lib/mosquitto/
 
-log_dest file /var/log/mosquitto/mosquitto.log
+
+
+
 
 include_dir /etc/mosquitto/conf.d
