supervisord conf change

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -182,6 +182,7 @@ directory=/app/mqttdockersample/
 command=/bin/python3 timeservmqtt.py
 autostart=true
 exitcodes=0
+startretries = 1
 
 [program:Cprogram]
 directory=/app/mqttdockersample/
