--- a/withoutSSL/Makefile
+++ b/withoutSSL/Makefile
@@ -8,7 +8,7 @@ LDFLAGS = -L../paho.mqtt.c/build/output
 
 TARGET=pubsub
 	
-pubsub:	pubsub3.o ../paho.mqtt.c/build/output ../sqlite-amalgamation
+pubsub:	pubsub3.o .../paho.mqtt.c/build/output .../sqlite-amalgamation
 	$(CC) pubsub3.o $(LDFLAGS) -lpaho-mqtt3a $(INCLUDES) -lsqlite3 -o pubsub
 	
 pubsub.o:	pubsub3.c 
